# Volga

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  temp.txt
alembic/: env.py
alembic/versions/: 315ee77238a6_add_token_prefix_cascade.py  409416e0fc04_add_authentication_tables_and_update_.py  6a6f38e81ebc_changning_models.py  8faa85d438a2_fix_datetime_timezone.py  f0219e1e9816_initial_migration.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: health.py  rest.py  webhooks.py
app/api/middlewares/: __init__.py  auth_middleware.py  logging_middleware.py  permission_middleware.py  rate_limiting_middleware.py
app/auth/: __init__.py  cache.py  dependencies.py  exceptions.py  jwt.py  password.py  permission_cache.py  permissions.py  rbac.py  schemas.py  service.py  token_utils.py
app/core/: __init__.py  cache.py  logger.py  rate_limit.py  state.py  supervisor.py  workflow.py
app/core/agents/: __init__.py  (+5 more)
app/database/: crud.py  models.py  redis.py  redis_client.py  session.py  vector_db.py
app/integrations/: calendar.py  twilio.py  whatsapp.py
app/scripts/: setup_contact_embedding.py  setup_property_embedding.py  setup_qdrant_collection.py  test_env.py
app/services/: auth.py  email_service.py  gdpr.py  message_processor.py  notification.py
app/utils/: formatters.py  helpers.py  llm.py  logging.py  phone_utils.py  validators.py
app/workers/: __init__.py  celery_app.py
data/: sample_leads.json  sample_properties.json  seed_data.py
docs/: api.md  architecture.md  deployment.md  testing.md  user_jouney.txt
scripts/: deploy.sh  recreate_tables.py  seed_data.py  seed_permissions.py  setup_db.py  start_celery_beat.sh  start_celery_worker.sh  start_local.py  test_config.py  test_connections.py
tests/: conftest.py  test_agents.py  test_business_logic.py  test_integration.py  test_webhooks.py
tests/test_rbac/: __init__.py  test_permission_endpoints.py  test_permission_service.py
(+59 files in other folders)
