[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "langgraph>=0.6.0",
    "langgraph-sdk>=0.1.66",
    "langgraph-checkpoint>=2.0.23",
    "langchain-core>=0.2.38",
    "langsmith>=0.1.63",
    "orjson>=3.9.7,<3.10.17",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "uvicorn>=0.26.0",
    "sse-starlette>=2.1.0,<2.2.0",
    "uvloop>=0.18.0",
    "httptools>=0.5.0",
    "jsonschema-rs>=0.20.0",
    "structlog>=24.1.0",
    "cloudpickle>=3.0.0",
    "langchain-groq>=1.1.1",
    "sqlmodel>=0.0.28",
    "sqlalchemy>=2.0.45",
    "fastapi[standard]>=0.127.0",
    "asyncpg>=0.31.0",
]
