[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "langgraph>=0.6.0",
    "langgraph-sdk>=0.1.66",
    "langgraph-checkpoint>=2.0.23",
    "langchain-core>=0.2.38",
    "langsmith>=0.1.63",
    "orjson>=3.9.7,<3.10.17",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "uvicorn>=0.26.0",
    "sse-starlette>=2.1.0,<2.2.0",
    "uvloop>=0.18.0",
    "httptools>=0.5.0",
    "jsonschema-rs>=0.20.0",
    "structlog>=24.1.0",
    "cloudpickle>=3.0.0",
    "langchain-groq>=1.1.1",
    "sqlmodel>=0.0.28",
    "sqlalchemy>=2.0.45",
    "fastapi[standard]>=0.127.0",
    "asyncpg>=0.31.0",
    "alembic>=1.17.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "greenlet>=3.3.0",  # Required for SQLAlchemy async operations
    "redis>=5.0.1",  # Redis async client
    "bcrypt>=4.0.1",  # Password hashing
    "PyJWT>=2.8.0",  # JWT tokens
    "fastapi-mail>=1.4.1",  # Email service
    "celery>=5.3.4",  # Background tasks
    "jinja2>=3.1.2",  # Email templates
    "asgiref>=3.7.0",  # Async sync bridge for Celery
    "pytest>=9.0.2",
]
